force-app/main/default/objects/KfW_Konditionen__c/KfW_Konditionen__c.object-meta.xml
<CustomObject>
    <label>KfW Konditionen</label>
    <nameField>
        <label>KfW Konditionen-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KfW Konditionen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>