force-app/main/default/objects/KfW_Konditionen__c/fields/Zins_11_20_Jahre_10_Jahre_Zinsbindung__c.field-meta.xml
<CustomField>
    <fullName>Zins_11_20_Jahre_10_Jahre_Zinsbindung__c</fullName>
    <label>Zins 11-20 Jahre 10 Jahre Zinsbindung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>