force-app/main/default/objects/KfW_Konditionen__c/fields/Zins_21_30_Jahre_10_Jahre_Zinsbindung__c.field-meta.xml
<CustomField>
    <fullName>Zins_21_30_Jahre_10_Jahre_Zinsbindung__c</fullName>
    <label>Zins 21-30 Jahre 10 Jahre Zinsbindung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>